lab1/Code/syntax.output
State 28 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | error

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP error RP
   23       | error LP VarList RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | error

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 14 22 23 28 37 41 64
    INT (258) 19 62
    FLOAT (259) 63
    ID (260) 15 17 18 20 21 22 57 58 60 61
    SEMI (261) 4 5 7 31 33 37 40 41
    COMMA (262) 9 24 43 65
    ASSIGNOP (263) 45 46
    RELOP (264) 49
    PLUS (265) 50
    MINUS (266) 51 55
    STAR (267) 52
    DIV (268) 53
    AND (269) 47
    OR (270) 48
    DOT (271) 60
    NOT (272) 56
    TYPE (273) 10
    LP (274) 20 21 22 23 34 35 36 54 57 58
    RP (275) 20 21 22 23 34 35 36 54 57 58
    LB (276) 19 59
    RB (277) 19 59
    LC (278) 12 27
    RC (279) 12 27 28
    STRUCT (280) 12 13
    RETURN (281) 33
    IF (282) 34 35
    ELSE (283) 35
    WHILE (284) 36
    NEG (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 2
    ExtDef (35)
        on left: 4 5 6 7
        on right: 2
    ExtDecList (36)
        on left: 8 9
        on right: 4 9
    Specifier (37)
        on left: 10 11
        on right: 4 5 6 7 26 40 41
    StructSpecifier (38)
        on left: 12 13 14
        on right: 11
    OptTag (39)
        on left: 15 16
        on right: 12
    Tag (40)
        on left: 17
        on right: 13
    VarDec (41)
        on left: 18 19
        on right: 8 9 19 26 44 45
    FunDec (42)
        on left: 20 21 22 23
        on right: 6
    VarList (43)
        on left: 24 25
        on right: 20 23 24
    ParamDec (44)
        on left: 26
        on right: 24 25
    CompSt (45)
        on left: 27 28
        on right: 6 32
    StmtList (46)
        on left: 29 30
        on right: 27 29
    Stmt (47)
        on left: 31 32 33 34 35 36 37
        on right: 29 34 35 36
    DefList (48)
        on left: 38 39
        on right: 12 27 38
    Def (49)
        on left: 40 41
        on right: 38
    DecList (50)
        on left: 42 43
        on right: 40 43
    Dec (51)
        on left: 44 45
        on right: 42 43
    Exp (52)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55 56 59 60 65 66
    Args (53)
        on left: 65 66
        on right: 57 65


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   14 StructSpecifier: error .

    $default  reduce using rule 14 (StructSpecifier)


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 9

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 11

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

    7 ExtDef: Specifier error . SEMI
   23 FunDec: error . LP VarList RP

    SEMI  shift, and go to state 21
    LP    shift, and go to state 22


State 15

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 21

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 22

   23 FunDec: error LP . VarList RP

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   22       | ID LP . error RP

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 35


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 18


State 26

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 41


State 27

   28 CompSt: error . RC

    RC  shift, and go to state 42


State 28

   27 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   40 Def: Specifier . DecList SEMI
   41    | Specifier . error SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 32

   38 DefList: Def . DefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 32


State 33

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 50


State 34

   23 FunDec: error LP VarList . RP

    RP  shift, and go to state 51


State 35

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 25 (VarList)


State 36

   14 StructSpecifier: error .
   22 FunDec: ID LP error . RP

    RP  shift, and go to state 53

    $default  reduce using rule 14 (StructSpecifier)


State 37

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 38

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 39

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 40

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 41

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 42

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


State 43

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 28
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 44

   41 Def: Specifier error . SEMI

    SEMI  shift, and go to state 70


State 45

   19 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 26

    $default  reduce using rule 44 (Dec)


State 46

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 47

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 42 (DecList)


State 48

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 49

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 50

   19 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


State 51

   23 FunDec: error LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 52

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 35


State 53

   22 FunDec: ID LP error RP .

    $default  reduce using rule 22 (FunDec)


State 54

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 55

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 56

   28 CompSt: error . RC
   37 Stmt: error . SEMI
   64 Exp: error .

    SEMI  shift, and go to state 75
    RC    shift, and go to state 42

    SEMI      [reduce using rule 64 (Exp)]
    $default  reduce using rule 64 (Exp)


State 57

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 58

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 59

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 76

    $default  reduce using rule 61 (Exp)


State 60

   55 Exp: MINUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 78


State 61

   56 Exp: NOT . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 79


State 62

   54 Exp: LP . Exp RP

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 80


State 63

   33 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 81


State 64

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 82


State 65

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 83


State 66

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 67

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 68

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 28
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 85
    Stmt      go to state 68
    Exp       go to state 69


State 69

   31 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 70

   41 Def: Specifier error SEMI .

    $default  reduce using rule 41 (Def)


State 71

   45 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 97


State 72

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 73

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 98
    Dec      go to state 47


State 74

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 75

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 76

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


State 77

   64 Exp: error .

    $default  reduce using rule 64 (Exp)


State 78

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 55 (Exp)


State 79

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 56 (Exp)


State 80

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 102
    LB        shift, and go to state 96


State 81

   33 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 82

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 104


State 83

   36 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 105


State 84

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 85

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 86

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 87

   46 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 106


State 88

   49 Exp: Exp RELOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 107


State 89

   50 Exp: Exp PLUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 108


State 90

   51 Exp: Exp MINUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 109


State 91

   52 Exp: Exp STAR . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 110


State 92

   53 Exp: Exp DIV . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 111


State 93

   47 Exp: Exp AND . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 112


State 94

   48 Exp: Exp OR . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 113


State 95

   60 Exp: Exp DOT . ID

    ID  shift, and go to state 114


State 96

   59 Exp: Exp LB . Exp RB

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 115


State 97
